<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <Button
        android:id="@+id/buttonOpenHistory"
        android:layout_width="191dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="64dp"
        android:onClick="onButtonOpenHistoryClicked"
        android:text="Input new classes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Search_for_classmates"
        android:layout_width="163dp"
        android:layout_height="44dp"


        android:layout_marginTop="30dp"

        android:layout_marginBottom="39dp"
        android:onClick="onSearchForClassmatesClicked"
        android:text="Start"
        app:layout_constraintBottom_toTopOf="@+id/users_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_view"
        android:layout_width="410dp"
        android:layout_height="286dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyFavorite"
        app:layout_constraintVertical_bias="0.543" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="28dp"

        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/users_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MyFavorite"
        android:layout_width="67dp"
        android:layout_height="57dp"
        android:background="@android:drawable/btn_star"
        android:onClick="onStarClicked"
        android:text="View"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163"
        app:layout_constraintTop_toBottomOf="@+id/Search_for_classmates"/>

    <Button
        android:id="@+id/buttonMockWave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="mock wave"
        android:onClick="onMockWaveButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOpenHistory" />

    <Button
        android:id="@+id/load_button"
        android:layout_width="78dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="66dp"
        android:onClick="onLoadClicked"
        android:text="load\ndata"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="78dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="68dp"
        android:onClick="onSaveSessionClicked"
        android:text="save\ndata"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
</androidx.constraintlayout.widget.ConstraintLayout>