<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40sp"
    android:layout_marginLeft="16sp"
    android:layout_marginRight="16sp"
    android:gravity="center_vertical">

    //The image button for "favorite" stars

    <TextView
        android:id="@+id/users_row"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@android:drawable/btn_star" />

    <ImageView
        android:id="@+id/imageViewRecycleView"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/textViewNoCourses"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:textSize="24sp" />
</FrameLayout>