...
    <TextView
        android:id="@+id/PersonDetailName"
        android:layout_width="118dp"
        android:layout_height="45dp"
        android:text="Name"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonWave"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPersonDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewPersonDetail"
...
